[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Kleber Fukushima <kleber.jhun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
django-rest-framework = "^0.1.0"
pytest-django = "^4.8.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.3.0"
flake8 = "^7.0.0"
black = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
